--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,4 +1,4 @@
-name: Go Build
+name: Go (Nix Build)
 
 on:
   push:
@@ -12,10 +12,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
+      - name: Install Nix
+        uses: cachix/install-nix-action@v27
         with:
-          go-version: "1.23.3"
+          extra_nix_config: |
+            experimental-features = nix-command flakes
 
-      - name: Build
-        run: go build -o -v ./cmd/hypr-exiled/
+      - name: Build with Nix environment
+        run: nix develop --command sh -c "go build -o hypr-exiled ./cmd/hypr-exiled/"
