--- a/.github/workflows/linux_build_release.yml
+++ b/.github/workflows/linux_build_release.yml
@@ -40,9 +40,9 @@ jobs:
 
           # Check commit history for version triggers
           COMMIT_HISTORY=$(git log --pretty=format:"%s" $LATEST_TAG..HEAD)
-          if echo "$COMMIT_HISTORY" | grep -qi '#major'; then
+          if echo "$COMMIT_HISTORY" | grep -qi 'major:'; then
             NEW_VERSION="$((MAJOR + 1)).0.0"
-          elif echo "$COMMIT_HISTORY" | grep -qi '#minor'; then
+          elif echo "$COMMIT_HISTORY" | grep -qi 'minor:'; then
             NEW_VERSION="$MAJOR.$((MINOR + 1)).0"
           fi
 
